# emscripten-github

./: .ninja_deps  .ninja_log  CMakeCache.txt  MyApp.js  MyApp.wasm  README.md  TemplateApp.js  TemplateApp.wasm  build.ninja  compile_commands.json  index.html  install_manifest.txt
.github/workflows/: Emscripten.yml
CPM_modules/: Findimgui.cmake
apps/MyApp/: CMakeLists.txt
apps/MyApp/src/: CMakeLists.txt  main.cpp
apps/MyApp/src/private/: Game.cpp
apps/TemplateApp/: CMakeLists.txt
apps/TemplateApp/src/: CMakeLists.txt  main.cpp
apps/TemplateApp/src/private/: Game.cpp
cmake/: ConfigureTarget.cmake  DownloadCPM.cmake  Options.cmake
cmake/libs/: FetchDoctest.cmake  FetchGLAD.cmake  FetchGoogleBenchmark.cmake  FetchIMGUI.cmake  FetchSDL2.cmake  FetchSol2.cmake
cmake/project/: CheckIsRoot.cmake  CompilerWarnings.cmake  ConfigureTarget.cmake  Options.cmake
docs/: BUILD.md  credits.md  deps.md  workflow.md
engine/exe/: CMakeLists.txt
engine/exe/examples/: CMakeLists.txt
engine/exe/examples/SDL/: main.cpp
engine/exe/examples/default/: CMakeLists.txt  main.cpp
engine/exe/examples/sol/: CMakeLists.txt
engine/exe/src/: CMakeLists.txt
examples/example-template/: CMakeLists.txt  main.cpp
examples/sol - Copy/: CMakeLists.txt
exe/: CMakeLists.txt  cmake_install.cmake
exe/libs/: cmake_install.cmake
exe/src/: CMakeLists.txt  cmake_install.cmake
exe/src/private/: Library.cpp
libs/: CMakeLists.txt
src/: cmake_install.cmake
